# RESAUD

./: Resaud.ipynb  audio03.txt  audio05.txt  config.py  git.txt  metod.py  prueba.py  pruebas.py  requeriment.txt  requirements.txt  resaud.py
Retroalimentacion_profe/my-proyect/: pyproject.toml
Retroalimentacion_profe/my-proyect-virtual-env/: .python-version  config.py  report_model.py  requirements.txt  test.ipynb  utils.py
Retroalimentacion_profe/my-proyect-virtual-env/.ipynb_checkpoints/: test-checkpoint.ipynb
Retroalimentacion_profe/my-proyect-virtual-env/data/: transcripcion.txt
sumary_text/: Audio00_summary.txt
transcription_text/: Audio00.txt
