[tool.poetry]
name = "my-proyect"
version = "0.1.0"
description = ""
authors = ["fitolobo <rodolfolobo@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^0.28.1"
numpy = "^1.26.1"
jupyterlab = "^4.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
